fix: Added authentication for each request mapping and minor improvements

--- a/src/main/resources/application-dummy.properties
+++ b/src/main/resources/application-dummy.properties
@@ -5,4 +5,6 @@ spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
 jwt.secret=
-jwt.expiration-in-ms=
+jwt.expiration-in-ms==
+fastapi.url=
+frontend.url=
